# floorist

./: .baseimagedigest  .gitignore  .travis.yml  CODEOWNERS  Dockerfile  Makefile  README.md  app.py  build_deploy.sh  clowdapp.yaml  enable-extensions.sh  floorplan.example.yaml  pr_check.sh  pyproject.toml  renovate.json  requirements.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: checkimage.yaml  ci.yml  renovate-validator.yaml  tests.yaml
.tekton/: floorist-pull-request.yaml  floorist-push.yaml
app-src/: app.py
deployment/: build-deploy-common.sh
scripts/: deploy_test_env.sh
src/floorist/: config.py  floorist.py  helpers.py
test/: docker-compose.yml  floorplan_with_multiple_dumps.yaml  floorplan_without_prefix.yaml  test_floorist.py
tests/: docker-compose.yml  env.yaml.example  env.yaml.travis  floorplan_valid.yaml  floorplan_with_custom_chunksize.yaml  floorplan_with_empty_dataset.yaml  floorplan_with_invalid_prefix.yaml  floorplan_with_invalid_query.yaml  floorplan_with_large_result.yaml  floorplan_with_one_failing_dump.yaml  floorplan_with_zero_chunksize.yaml  floorplan_without_query.yaml  test_floorist.py  test_floorist_standalone.py
tests/templates/: README.md  openshift-template.yaml  test-job-template.yaml
tests/unit/: test_core.py  test_helpers.py
