[metadata]
name = floorist
url = https://github.com/RedHatInsights/floorist
description = Helper for dumping SQL queries from a PostgreSQL database into S3 buckets in parquet format
keywords = S3, Parquet, PostgreSQL
author = Dávid Halász (@skateman)
# TODO: Add versioning system
version = 0.0.1

[options]
install_require =
    app-common-python

python_requires = >=3.6, <4

[options.extras_require]
test =
    pytest
    pytest-mock
